--- a/css/base.css
+++ b/css/base.css
@@ -151,22 +151,21 @@ nav ul ul{
 	position:absolute; 
     top:99%;    /* Remove them out of viewport */
     left:-780px;  
-    /*opacity: 0;      /* Hide sub level, we will use this in transition */
-    /*-webkit-transition: opacity .8s ease; /* For chrome & safari */
-    /*-moz-transition: opacity .8s ease; /* For mozilla firefox */
-    /*-o-transition: opacity .8s ease; /* For opera */
-   /* transition: opacity .8s ease; Not yet implemented, but will be available soon */*/
+    opacity: 0;      /* Hide sub level, we will use this in transition */
+    -webkit-transition: opacity 2s ease; /* For chrome & safari */
+    -moz-transition: opacity 2s ease; /* For mozilla firefox */
+    -o-transition: opacity 2s ease; /* For opera */
+    transition: opacity 2s ease; /* Not yet implemented, but will be available soon */*/
     z-index:497;
     width:1400px;
     height:40px;
-    background:#333;
+    background:black;
     padding: 8px;
-    border:1px solid black;
     display: none;
 
     
 }
-nav > ul > li.top-menu:hover > ul { display: block;}
+nav > ul > li.top-menu:hover > ul { opacity: 0.7; display: block;}
 
 nav ul li ul >li{
 	float: left;
@@ -182,12 +181,12 @@ nav ul li ul.about li{
 nav ul li ul.service li{
 	position: relative;
 	float: left;
-	left: 593px;
+	left: 650px;
 }
 
 nav ul li ul >li a{
 	color: #808082 ;
-	font-size: 1em;
+	font-size: 0.9em;
 	padding: 4px 17px 0 3px;
 	border-right: 1px solid #747171;
 
@@ -215,6 +214,17 @@ nav li:hover .icon-menu { opacity: 1}
 
 nav ul li ul li:hover >a{
 	color: white;
+}
+/* slide show*/
 
-
+#slideshow {
+	position: relative;
+	width: 100%;
+	height: 420;
+	top:14px;
+}
+#slidesshow img {
+	position: absolute;
+	left: 0;
+	top:0;
 }
