--- a/css/base.css
+++ b/css/base.css
@@ -47,7 +47,7 @@ img {
 	float: left;
 	width: 100%;
 	padding: 20px 0 0 0;
-	position: relative;
+	position: fixed;
 	background: #fff;
 	z-index: 900;
 }
