--- a/css/home.css
+++ b/css/home.css
@@ -115,10 +115,11 @@ h2
 
 .content-container {
 	position: relative;
-	top:100px;
 	height: 800px;
 	width:100%;
 	text-align:center;
+	padding-left: 10%;
+	margin-top: 100px;
 }
 
 .content-container .content-item {
@@ -126,7 +127,6 @@ h2
 	width:300px;
 	height:260px;
 	position:relative;
-	left:2%;
 	margin-right:2%;
 	margin-bottom: 2%;
 }
@@ -187,10 +187,7 @@ h2
 	color: white;
 	padding-top: 6px;
 }
-.content-container .bHover2 {
-	margin-top:20px;
-	margin-left:10%;
-}
+
 .content-container #row {
 	width:100%;
 	text-align:left;
@@ -270,12 +267,14 @@ h2
 
 .content-container {
 	height: 545px;
+	padding-left: 7%;
+	margin-top: 160px;
 }
 
 }
 
 /*------------------------------for desktop------------------------------*/
-@media screen and (min-width: 70em ) {
+@media screen and (min-width: 65em ) {
 
 #slideshow {
 	top: 73px;
@@ -315,6 +314,7 @@ h2
 
 .content-container {
 	height: 270px;
+	margin-top: 100px;
 }
 
 }
