--- a/css/base.css
+++ b/css/base.css
@@ -28,6 +28,11 @@ body {
 	display: none;
 }
 
+.wrapper {
+	width: 440px;
+	padding: 0 20px;
+}
+
 #container {
 	width: 100%;
 	background: #fff;
@@ -235,12 +240,12 @@ body {
 /* footer copyright */
 #footer p.copyright {
 	position: absolute;
-	left: 20px;
+	left: 38px;
 	bottom: 15px;
 	font-size: 1.3em;
 	color: #6D6E71;
 	font-style: normal;
-	font-family: "proxima-nova",sans-serif;
+	font-family: sans-serif;
 	font-weight: 300;
 }
 #footer p.copyright a {
@@ -248,7 +253,16 @@ body {
 }
 
 /*------------------------for ipad------------------------------------*/
-@media screen and (min-width: 42em ) {
+@media screen and (min-width: 712px ) {
+#header .wrapper {
+	width: 100%;
+	padding: 0;
+}
+
+.wrapper {
+	width: 672px;
+	margin: auto;
+}
 
 #logo  {
 	width: 100%;
@@ -388,13 +402,16 @@ body {
 }
 
 /*------------------------------for desktop------------------------------*/
-@media screen and (min-width: 65em ) {
+@media screen and (min-width: 1009px ) {
 
-
+#header .wrapper {
+	width: 950px;
+}
 .wrapper {
 	position: relative;
 	margin: 0 auto;
-	width: 75%;
+	width: 950px;
+	padding: 0;
 }
 
 #logo {
@@ -411,7 +428,7 @@ body {
 .navigation {
 	width: 488px;
 	float: right;
-	left: 5%;
+	left: 3%;
 }
 
 .navigation ul {
