--- a/css/contact.css
+++ b/css/contact.css
@@ -35,45 +35,22 @@
 	color: #fff;
 }
 
-.left-content {
-	width: 100%
-}
-
-.contact-top h3 {
-	font-size: 2.4em;
-}
-
-.contact-top p { 
-	font-family:sans-serif;
-	font-style: normal;
-	font-weight: 400;
-	padding: 0px 0px 0px 0px;
-	margin: 0 0 12px 0;
-	font-size: 1.6em;
-	line-height: 1.4em;
-	text-indent: 0px;
-	color: #3A3A3A;
-}
-
-
 /* content */
 
 #content {
-	margin-top:115px;
-	height: 450px;
+	margin-top:20px;
+	height: 850px;
+	padding-left: 11%;
 }
 
 #content .content-left
 {
-	position: absolute;
 	width: 65%;
-	height: 260px;
 }
 
  #content .content-right
 {
-	position: absolute;
-	left: 65%;
+
 }
 
 #content .content-left h3
@@ -105,28 +82,8 @@
 	border-bottom: dashed 1px #828282;
 }
 
-#content #form
-{
-	margin:40px auto;
-	padding:0;
-	font-size:100%;
-}
-
 #content fieldset{
 	border:0;
-}
-
-#content .group{
-	float:left;
-}
-
-#content .left{
-	float:left;
-}
-
-#content .right{
-	float:right;
-	margin-left:18px;
 }
 
 #content label{
@@ -155,12 +112,9 @@
 
 #content textarea{
 	display:block;
-	font-size:1.9em;
 	color:#414042;
 	font-style:normal;
 	font-weight:400;
-	width:460px;
-	height:125px;
 	padding:5px 0px 0px 0px;
 	border:solid 1px #C6C6C6;
 	margin:0px 0px 50px 0px;
@@ -246,7 +200,7 @@
 
 
 /*------------------------for ipad------------------------------------*/
-@media screen and (min-width: 42em ) {
+@media screen and (min-width: 712px ) {
 
 .banner, .banner img{
 	height:420px;
@@ -261,11 +215,51 @@
 	bottom: 120px;
 }
 
+/* content */
+
+#content {
+	margin-top:115px;
+	height: 475px;
+	padding:0;
+}
+
+#content .content-left
+{
+	position: absolute;
+	width: 50%;
+	height: 480px;
+}
+
+ #content .content-right
+{
+	position: absolute;
+	left: 53%;
+}
+
+
+#content .content-left p:last-child {
+	width: 50%;
+}
+
+#content #form
+{
+	margin:40px auto;
+	padding:0;
+	font-size:100%;
+}
+
+#content textarea{
+	font-size:1.9em;
+	width:460px;
+	height:125px;
+}
+
+
 }
 
 /*------------------------------for desktop------------------------------*/
 
-@media screen and (min-width: 64em ) {
+@media screen and (min-width: 1009px ) {
 
 .banner {
 	top:74px;
@@ -276,65 +270,35 @@
 	left: 0;
 }
 
-}
- 
-.content-bottom {
-	position: relative;
+#content {
+	margin-top:115px;
+	height: 468px;
 }
 
-.right-box #div{
+#content .content-left
+{
+	position: absolute;
+	width: 65%;
+	height: 260px;
+}
+
+#content .content-right
+{
+	position: absolute;
+	left: 67%;
+}
+
+#content .content-left p:last-child {
+	width: 100%;
+}
+
+#content .group, #content .left{
 	float:left;
-	width:300px;
-	height:260px;
-	position:relative;
-	margin-bottom:20px;
-	left:10%;
-	margin-left:2%;
 }
-.right-box .overlay {
-    background: none repeat scroll 0 0 #000000;
-    height: 260px;
-    opacity: 0.3;
-    position: absolute;
-    width: 300px;
-}
-.right-box #title {
-	position:absolute;
-	font-size:200%;
-	width:100%;
-}
-.right-box #title a {
-	color:#FFF;
-}
-.right-box #tHover {
-	position:absolute;
-    margin-top: 55px;
-    padding: 0 36px;
-    text-align: center;
-    width: 228px;
-	visibility:hidden;
-}
-.right-box #tHover a {
-	color: #FFFFFF;
-	font-size: 16px;
-	line-height:30px;
-}
-.right-box #bHover {
-	text-align: center;
-    text-transform: uppercase;
-	position:absolute;
-	top:180px;
-	left:60px;
-	visibility:hidden;
-}
-.right-box #bHover a {
-	background: none repeat scroll 0 0 #B13279;
-	padding: 12px 20px;
-	font-size: 12px;
-	color:#FFF;
-}
-.right-box .title1 {
-	top:43%;
+
+#content .right{
+	float:right;
+	margin-left:17px;
 }
 
 }
