--- a/css/home.css
+++ b/css/home.css
@@ -116,10 +116,9 @@ h2
 .content-container {
 	position: relative;
 	height: 800px;
-	width:100%;
 	text-align:center;
-	padding-left: 10%;
 	margin-top: 100px;
+	padding-left: 10%;
 }
 
 .content-container .content-item {
@@ -129,6 +128,7 @@ h2
 	position:relative;
 	margin-right:2%;
 	margin-bottom: 2%;
+
 }
 
 .content-container .overlay {
@@ -222,7 +222,7 @@ h2
 
 
 /*------------------------for ipad------------------------------------*/
-@media screen and (min-width: 42em ) {
+@media screen and (min-width: 712px) {
 
 #slideshow {
 	height: 420px;
@@ -267,14 +267,18 @@ h2
 
 .content-container {
 	height: 545px;
-	padding-left: 7%;
 	margin-top: 160px;
+	padding-left: 0;
+}
+
+.content-container .content-item:last-child {
+	left: 150px;
 }
 
 }
 
 /*------------------------------for desktop------------------------------*/
-@media screen and (min-width: 65em ) {
+@media screen and (min-width: 1009px) {
 
 #slideshow {
 	top: 73px;
@@ -315,6 +319,15 @@ h2
 .content-container {
 	height: 270px;
 	margin-top: 100px;
+}
+
+.content-container .content-item {
+	margin-right: 1%;
+
+}
+
+.content-container .content-item:last-child {
+	left:0;
 }
 
 }
